--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.11, <3.12"
 tensorflow-macos = "^2.14.0"
+matplotlib = "^3.8.0"
 
 
 [tool.poetry.group.dev.dependencies]
